# QRL

./: README.md  pyproject.toml
config/: algorithms.yaml
scripts/: benchmark_algorithms.py  test_algorithm.py  test_quantile_huber.py
src/qrl/: functions.py  mdp.py
src/qrl/algorithms/: __init__.py  d4pg_qr.py  ddpg.py  md4pg.py  ppo.py  reinforce.py  td3.py  vmpo.py
